Moved generated/expected JSON schema to schemas/ so that we can use this to publish at schema-store.org